# HWDJANGO

./: .env.example  .gitignore  HWDjango.rar  README.md  arguments.txt  core_data.json  pyproject.toml  requirements.txt  Ссылка на репозиторий.txt
Microsoft/Windows/PowerShell/: ModuleAnalysisCache
barbershop/: settings.py  urls.py
blog/: models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_post_html_description_post_md_description.py
blog/templates/blog/: post_card_include.html  post_detail.html  posts_list.html
core/: admin.py  apps.py  context_processors.py  data.py  forms.py  mistral.py  models.py  signals.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_alter_order_options_and_more.py  0003_alter_service_duration_alter_service_image.py  0004_alter_master_options_alter_review_options_and_more.py  0005_alter_service_duration_alter_service_is_popular.py
core/templates/core/: landing.html  order_card_include.html  order_detail.html  order_form.html  orders_list.html  review_form.html  service_create.html  service_detail.html  thanks.html
static/: pyproject.toml
static/css/: main.css
static/js/: main.js  order_form.js  reviews.js
templates/: base.html  landing.html  nav_menu_include.html  thanks.html
templates/includes/: nav_menu_include.html
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/templates/users/: account_base.html  account_menu_include.html  login.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  (+5 more)
(+3 files in other folders)
