[project]
name = "hwdjango"
version = "0.1.0"
description = ""
authors = [
    {name = "Ekaterina",email = "katusha158@rambler.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.1.7,<6.0.0)",
    "mistralai (>=1.6.0,<2.0.0)",
    "markdown (>=3.7,<4.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "django-extensions (>=4.1,<5.0)",
    "python-telegram-bot (>=22.1,<23.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
